syntax = "proto3";

package syndicode_interface_v1;

/// Handles user authentication and registration.
service AuthService {
  /// Registers a new user and their corporation.
  rpc Register(RegisterRequest) returns (RegisterResponse);

  /// Authenticates a user and returns a JWT token.
  rpc Login(LoginRequest) returns (LoginResponse);
}

/// Request to register a new user.
message RegisterRequest {
  /// The desired username.
  string user_name = 1;

  /// The user's chosen password.
  string user_password = 2;

  /// Name of the corporation to register under.
  string corporation_name = 3;
}

/// Response after successful registration.
message RegisterResponse {
  /// UUID of the newly created user.
  string user_uuid = 1;
}

/// Request to log in with username and password.
message LoginRequest {
  /// Username of the player attempting to login.
  string user_name = 1;

  /// Password of the player attempting to login.
  string user_password = 2;
}

/// Response containing a JWT token after login.
message LoginResponse {
  /// JWT token for authenticated access.
  string jwt = 1;
}

